@@ -2,11 +2,17 @@
 \name{NEWS}
 \title{NEWS file for the \pkg{mvtnorm} package}
 
-\section{Changes in Version 1.2-3 (2023-07-13)}{
+\section{Changes in Version 1.2-3 (2023-08-15)}{
   \subsection{Features}{
     \itemize{
       \item Allow to change \code{rnorm} in \code{rmvnorm}, feature request
             by Ralf Stubner.
+    }
+  }
+  \subection{Bugfixes}{
+    \itemize{
+      \item Fix variable declarations in \code{tvpack.f} as reported by Intel 
+            compilers icx/ipcx/ifx from oneAPI 2023.2.0 and oneMKL 2023.2.0, thanks to BDR
     }
   }
 }
